# egngine

./: CMakeLists.txt  LICENSE.md  README.md  egcollision.c  egcollision.h  egcore.c  egcore.h  egentity.c  egentity.h  eggl3renderer.c  eggl3renderer.h  egmath.c  egmem.c  egmem.h  egrenderer.c  egrenderer.h  iqm.c  iqm.h  model.c  model.h  util.c
util/: array.h  egmath.h  sort.h
